# Case_Gabriel_Mizuno

./: README.md  main.py  pyproject.toml  requirements.txt
jobs/: client.py  products.py  transactions.py
jobs/clients/: client.py
jobs/products/: products.py
jobs/transactions/: transactions.py
mock/: __init__.py  client.py  products.py  transaction.py
monitoring/: __init__.py  constants.py
monitoring/smtp/: __init__.py  send_email.py  smtp_connection.py  stmp_service.py
output/: __init__.py
output/api/: __init__.py  api_connect.py  api_request.py  error.py
output/sftp/: __init__.py  error.py  sftp_connection.py  sftp_operation.py
terraform/: backend.tf  main.tf  terraform.tfvars  variables.tf
terraform/modules/cloudfunction/: main.tf
terraform/modules/storage-bucket/: variables.tf
utils/: __init__.py  dedup.py  send_api.py  send_sftp.py  transform.py  validations.py
utils/transform/: __init__.py  transform.py  transform_client.py  trasnform_transaction.py
